RESOLVED FIXED66732
[Qt] RenderThemeQt::adjustSliderThumbSize() doesn't differentiate vertical case
https://bugs.webkit.org/show_bug.cgi?id=66732
Summary [Qt] RenderThemeQt::adjustSliderThumbSize() doesn't differentiate vertical case
Tatiana Meshkova
Reported 2011-08-22 16:56:11 PDT
We should swap length and thickness for vertical orientation. This bug blocks bug #50453
Attachments
Patch (3.27 KB, patch)
2011-08-22 17:40 PDT, Tatiana Meshkova
no flags
Patch (3.29 KB, patch)
2011-08-23 12:05 PDT, Tatiana Meshkova
no flags
Tatiana Meshkova
Comment 1 2011-08-22 16:58:33 PDT
thumbslider-no-parent-slider.html expectations are wrong also. There should be: RenderBody {BODY} at (8,8) size 784x584 RenderBlock {SPAN} at (0,0) size 11x16 RenderBR {BR} at (11,16) size 0x0 - RenderBlock {SPAN} at (0,16) size 11x16 + RenderBlock {SPAN} at (0,16) size 16x11 RenderText {#text} at (0,0) size 0x0
Tatiana Meshkova
Comment 2 2011-08-22 17:40:35 PDT
WebKit Review Bot
Comment 3 2011-08-23 11:29:04 PDT
Comment on attachment 104776 [details] Patch Rejecting attachment 104776 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=ec2-cq-02', '--port..." exit_code: 2 Last 500 characters of output: g file LayoutTests/platform/qt/fast/forms/thumbslider-no-parent-slider-expected.txt Hunk #1 FAILED at 5. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/qt/fast/forms/thumbslider-no-parent-slider-expected.txt.rej patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/platform/qt/RenderThemeQt.cpp Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Kenneth Rohde Christia..." exit_code: 1 Full output: http://queues.webkit.org/results/9480440
Tatiana Meshkova
Comment 4 2011-08-23 12:05:14 PDT
Tatiana Meshkova
Comment 5 2011-08-23 12:06:52 PDT
Comment on attachment 104882 [details] Patch rebased
Kenneth Rohde Christiansen
Comment 6 2011-08-23 14:26:16 PDT
Comment on attachment 104882 [details] Patch When it was already reviewed, no need to set the r? flag
WebKit Review Bot
Comment 7 2011-08-23 15:58:02 PDT
Comment on attachment 104882 [details] Patch Clearing flags on attachment: 104882 Committed r93644: <http://trac.webkit.org/changeset/93644>
WebKit Review Bot
Comment 8 2011-08-23 15:58:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.