Source/WebCore: Prepare to paint slider thumb separately. Provide proper size values for vertical SliderThumb. https://bugs.webkit.org/show_bug.cgi?id=66732

Patch by Tatiana Meshkova <tatiana.meshkova@nokia.com> on 2011-08-23
Reviewed by Kenneth Rohde Christiansen.

* platform/qt/RenderThemeQt.cpp:
(WebCore::RenderThemeQt::adjustSliderThumbSize):
Swap length and thickness for sliderthumb-vertical.

LayoutTests: Swap width and height for sliderthumb-vertical.
https://bugs.webkit.org/show_bug.cgi?id=66732

Patch by Tatiana Meshkova <tatiana.meshkova@nokia.com> on 2011-08-23
Reviewed by Kenneth Rohde Christiansen.

* platform/qt/fast/forms/range/thumbslider-no-parent-slider-expected.txt:

Canonical link: https://commits.webkit.org/82617@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93644 268f45cc-cd09-0410-ab3c-d52691b4dbfc